# bazel_migration_utils

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  common.package.json  index.bzl  package.json  publish.sh  scope.bzl  tsconfig.json
.github/workflows/: default.yml  nodejs.yml
cli-builder/: BUILD.bazel  rollup.deps.bzl
deps-builder/: BUILD  BUILD.bazel  cli.ts  deps.builder.spec.ts  deps.builder.ts  index.ts  input.arg.ts  npm.deps.prefix.ts  template.package.json
json-merger/: BUILD  BUILD.bazel  index.ts  input.arg.ts  json-file.merge.spec.ts  json-file.merger.ts  template.package.json
json-value-extractor/: BUILD  BUILD.bazel  README.md  extract-value.ts  index.ts  input.arg.ts  json-value-extractor.package.json  json.value.extractor.spec.ts  json.value.extractor.ts  template.package.json
lockfile-filter/: BUILD  BUILD.bazel  README.md  cli.ts  filter.request.ts  index.ts  input.arg.ts  lockfile-filter.package.json  lockfile.filter.spec.ts  lockfile.filter.ts  lockfile.parser.spec.ts  lockfile.parser.ts  parsed.lockfile.ts  template.package.json
merge-json/: BUILD  index.ts
npm/: archive.bzl  node_modules.bzl  package.bzl
package-builder/: BUILD.bazel  index.bzl  library.bzl  module_name.bzl  package.bzl  registry_deps.bzl
serverless-support/: BUILD  BUILD.bazel  README.md  cli.ts  index.ts  input.arg.ts  serverless.config.file.ts  sls.folder.resolver.ts  template.package.json
