package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

all_sources = ["**/*.ts"]

all_tests = [
    "**/*.spec.ts",
    "**/test/**",
]

ts_library(
    name = "deps-builder",
    srcs = glob(
        all_sources,
        exclude = all_tests,
    ),
    deps = [
        "@npm//@types/node",
        "@npm//@types/yargs",
        "@npm//jsonpath",
        "@npm//yargs",
    ],
)

ts_library(
    name = "test_lib",
    srcs = glob(all_tests),
    deps = [
        ":deps-builder",
        "@npm//@types/chai",
        "@npm//@types/jasmine",
        "@npm//chai",
    ],
)

load("@npm_bazel_jasmine//:index.bzl", "jasmine_node_test")

jasmine_node_test(
    name = "test",
    deps = [
        ":test_lib",
        "@npm//chai",
        "@npm//jasmine",
    ],
)

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "bin",
    data = [
        ":deps-builder",
        "@npm//source-map-support",
    ],
    entry_point = ":index.ts",
)
