package(default_visibility = ["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("//npm:package.bzl", "enhanced_npm_package")
load("//:version.bzl", "VERSION")

all_sources = ["*.ts"]

all_tests = [
    "*.spec.ts"
]

lib_name = "lib"

module_name = "@djabry/json-merger"

npm_deps = [
    "@npm//yargs",
    "@npm//lodash"
]

ts_library(
    name = lib_name,
    module_name = module_name,
    srcs = glob(
        all_sources,
        exclude = all_tests,
    ),
    deps = [
        "@npm//@types/node",
        "@npm//@types/yargs"
    ] + npm_deps,
)

all_tests = ["*.spec.ts"]

ts_library(
    name = "test_lib",
    srcs = glob(all_tests),
    deps = [
        lib_name,
        "@npm//@types/chai",
        "@npm//@types/jasmine",
        "@npm//chai",
    ],
)

load("@npm_bazel_jasmine//:index.bzl", "jasmine_node_test")

jasmine_node_test(
    name = "test",
    deps = [
        ":test_lib",
        "@npm//chai",
        "@npm//jasmine",
    ],
)

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "bin",
    data = [
        lib_name,
        "@npm//source-map-support",
    ],
    entry_point = ":cli.ts",
)

enhanced_npm_package(
    name = "package",
    srcs = [
    ],
    version = VERSION,
    module_name = module_name,
    root_package_json = "//:package.json",
    npm_deps = npm_deps,
    package_layers = [
        "//:common.package.json",
        "template.package.json"
    ],
    deps = [
        lib_name
    ],
)