package(default_visibility = ["//visibility:public"])
load("//package-builder:index.bzl", "library")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//:scope.bzl", "SCOPE")
load("//npm:package.bzl", "enhanced_npm_package")


all_sources = ["*.ts"]

all_tests = [
    "*.spec.ts",
]

npm_deps = [
    "@npm//yargs",
    "@npm//lodash",
]

library(
    srcs = glob(all_sources, exclude = all_tests),
    deps = npm_deps
)

ts_library(
    name = "test_lib",
    srcs = glob(all_tests),
    deps = [
        lib_name,
        "@npm//@types/chai",
        "@npm//@types/jasmine",
        "@npm//chai",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [
        ":test_lib",
        "@npm//chai",
        "@npm//jasmine",
    ],
)

nodejs_binary(
    name = "bin",
    data = [
        lib_name,
        "@npm//source-map-support",
    ],
    entry_point = ":cli.ts",
)

enhanced_npm_package(
    name = "package",
    srcs = [
    ],
    module_name = module_name,
    npm_deps = npm_deps,
    package_layers = [
        "//:common.package.json",
        "template.package.json",
    ],
    root_package_json = "//:package.json",
    deps = [
        lib_name,
    ],
)
