package(default_visibility = ["//visibility:public"])

load("//npm:package.bzl", "enhanced_npm_package")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

all_sources = ["**/*.ts"]

all_tests = [
    "**/*.spec.ts",
    "**/test/**",
]

npm_deps = [
    "@npm//yargs",
]

lib_name = "serverless-support"

module_name = "@djabry/" + lib_name

ts_library(
    name = lib_name,
    srcs = glob(
        all_sources,
        exclude = all_tests,
    ),
    module_name = module_name,
    deps = [
        "@npm//@types/node",
        "@npm//@types/yargs",
        "@npm//yargs",
    ],
)

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "bin",
    data = [
        lib_name,
        "@npm//source-map-support",
    ],
    entry_point = "cli.ts",
)


enhanced_npm_package(
    name = "package",
    srcs = [
        "README.md",
    ],
    module_name = module_name,
    npm_deps = npm_deps,
    package_layers = [
        "//:common.package.json",
        "template.package.json",
    ],
    root_package_json = "//:package.json",
    deps = [
        lib_name,
    ],
)
